--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/database.yml
+
+# Angular 4 dist
+/public/*.bundle.*
+/public/assets
